<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:padding="8dp"
              android:layout_width="match_parent"
              android:layout_height="60dp">

    <ImageView
        android:id="@+id/imgApp"
        android:layout_width="40dp"
        android:layout_height="40dp"/>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="40dip"
        android:layout_marginLeft="10dip">

        <TextView
            android:id="@+id/tvLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/applabel"
            android:textColor="#000"/>

        <TextView
            android:id="@+id/tvAppLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="3dip"
            android:layout_toRightOf="@id/tvLabel"
            android:text="@string/label"
            android:textColor="#000"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvLabel"
            android:text="@string/app"
            android:textColor="#000"/>

        <TextView
            android:id="@+id/tvPkgName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@id/tvAppLabel"
            android:layout_below="@id/tvAppLabel"
            android:textColor="#000"/>
    </RelativeLayout>
</LinearLayout>

